<resources>
    <string name="app_name">五子棋</string>
    <!--main_home-->
    <string name="main_home_man_man">双人对战</string>
    <string name="main_home_man_machine">人机对战</string>
    <string name="main_home_setting">联网对战</string>
    <string name="main_home_logout">注销</string>
    <string name="main_home_about">关于</string>
    <string name="main_home_exit">再次点击退出</string>
    <string name="main_home_welcome">欢迎&#160;%1$s&#160;来到五子棋世界</string>
    <string name="main_home_register">朝歌帐号注册</string>

    <!--game_board-->
    <string name="game_board_menu">菜单</string>
    <string name="game_board_give_up">认输</string>
    <string name="game_board_undo">悔棋</string>
    <string name="game_board_restart">重开局</string>
    <string name="game_board_draw_piece">和棋</string>
    <string name="game_board_time_name">时间：</string>
    <string name="game_board_time">05:00</string>
    <string name="game_board_battle_history">赢：%1$s&#160;&#160;负：%2$s&#160;&#160;和：%3$s</string>
    <string name="game_board_id">ID:123456</string>
    <string name="game_board_person_name">昵称：大香蕉</string>
    <string name="game_board_upper_hand">先手</string>
    <string name="game_board_defensive">后手</string>
    <string name="game_board_turn">别急，还没轮到您呢~~</string>

    <!--setting-->
    <string name="setting_manager_account">账号管理</string>
    <string name="setting_phone_num">手机号码</string>
    <string name="setting_help">帮助与反馈</string>

    <!--about-->
    <string name="about_version">版本</string>
    <string name="about_version_app_name">应用名： </string>
    <string name="about_version_num">版本号： </string>
    <string name="about_functional_introduction">功能介绍</string>
    <string name="about_function">五子棋是起源于中国古代的传统黑白棋之一，在一块类似围棋的棋盘上，你和对手轮流放下黑白棋子，无论是横竖还是斜。只要有五颗相同颜色的棋子连成一线即可 获得一句胜利。它不仅能使人增强思维能力，提高智力，而且富含丰富的哲理，有助于修身养性。现在五子棋有“连珠”、“连五子”、“五子连珠”、“串珠”、 “五目”、“五目碰”、“五格”等多种称谓。</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_info">我们是相亲相爱的五人团队，专注于科学前沿技术研究。成员：\n廖玲丽(Email:liaolingli@sunniwell.net)\n林鸿博(Email:linhongbo@sunniwell.net)\n李强(Email:liqiang@sunniwell.net)\n黄锦兴(Email:huangjinxing@sunniwell.net)\n程建清(Email:chengjianqing@sunniwell.net)</string>


    <string name="string_register_register_succeed">恭喜你，注册成功！</string>
    <string name="string_sign_in_sign_in_succeed">登录成功！</string>
    <string name="string_word_account_hint">支持手机号/用户名登录</string>
    <string name="string_word_account">账号：</string>
    <string name="string_word_forget_password"><u>忘记密码</u></string>
    <string name="string_word_password">密码：</string>
    <string name="string_word_tel_number">手机号：</string>
    <string name="string_word_sms_code">验证码：</string>
    <string name="string_word_register_account">*用户名：</string>
    <string name="string_word_register_password">*密　码：</string>
    <string name="string_word_register_tel_number">*手机号：</string>
    <string name="string_word_register_sms_code">*验证码：</string>
    <string name="string_word_register_get_sms_code">获取验证码</string>
    <string name="string_word_register_hint">带*项目必填</string>
    <string name="string_tel_is_null">手机号为空！</string>
    <string name="string_user_exist">该手机号码已经被注册</string>
    <string name="string_sms_code_send_succeed">验证码发送成功！</string>
    <string name="string_sms_code_send_failed">验证码发送失败！</string>
    <string name="string_please_fill_in_complete_info">请填写完整的信息</string>
    <string name="string_please_fill_in_correct_telnum">请填写正确的手机号</string>
    <string name="string_word_register">注册</string>
    <string name="string_word_back">取消</string>
    <string name="string_word_exit">退出游戏</string>
    <string name="string_word_login">登录</string>
    <string name="string_word_othername">高级电脑</string>
    <string name="string_word_playname">朝歌第一帅</string>
    <string name="string_sign_out_succeed">注销成功</string>
    <string name="string_sign_out_failed">注销失败</string>
    <string name="string_word_please_wait">程序猿还在抓紧时间开发中,敬请期待&#8230;</string>
    <string name="string_white_win">白子胜利</string>
    <string name="string_black_win">黑子胜利</string>
</resources>
