<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/main_home_about"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_name"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/about_version"
            android:layout_width="600dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_shape"
            android:text="@string/about_version" />

        <Button
            android:id="@+id/about_functional_introduction"
            android:layout_width="600dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:text="@string/about_functional_introduction" />

        <Button
            android:id="@+id/about_us"
            android:layout_width="600dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:text="@string/about_us" />
    </LinearLayout>


</RelativeLayout>