<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/color_transparent">

    <Button
        android:id="@+id/btn_giveup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/left_menu"
        android:visibility="gone"
        android:text="@string/game_board_give_up" />

    <Button
        android:id="@+id/btn_undo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/left_menu"
        android:visibility="gone"
        android:text="@string/game_board_undo" />

    <Button
        android:id="@+id/btn_drawpiece"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/left_menu"
        android:visibility="gone"
        android:text="@string/game_board_draw_piece" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/left_menu"
        android:visibility="gone"
        android:text="@string/game_board_restart" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="70dip"
        android:layout_height="70dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/btn_menu"
        android:textSize="25dp" />
</RelativeLayout>