<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_register_item_height"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/string_word_account"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/id_login_account"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:hint="@string/string_word_account_hint"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/string_word_forget_password"
            android:textSize="14sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_register_item_height"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/string_word_password"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/id_login_password"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/id_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/string_word_forget_password"
            android:textColor="@color/color_blue"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="100dp"
        android:paddingStart="100dp">

        <Button
            android:id="@+id/id_goregister"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/selector_sign_in_button"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/string_word_register"
            android:textColor="@drawable/selector_sign_in_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/id_login"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/selector_sign_in_button"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/string_word_login"
            android:textColor="@drawable/selector_sign_in_text"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/id_exit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/selector_sign_in_button"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/string_word_exit"
        android:textColor="@drawable/selector_sign_in_text"
        android:textSize="20sp" />
</LinearLayout>